--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: pink;
+  background-color: rgb(233, 233, 233);
   font-family: "PressStart2P-Regular";
 }
 
@@ -13,12 +13,12 @@ h1 {
 }
 
 .result {
-  background-color: aquamarine;
+  background-color: rgb(251, 251, 251);
   width: 320px;
   height: 80px;
-  font-size: 24px;
   display: flex;
   align-items: center;
+  border-radius: 7px;
   box-sizing: border-box;
   padding: 8px;
 }
@@ -48,10 +48,15 @@ button {
   width: 80px;
   height: 80px;
   font-family: "PressStart2P-Regular";
-  background-color: aquamarine;
-  border: 1px solid rgb(37, 166, 140);
+  font-size: 11px;
+  align-items: center;
+  background-color: rgb(252, 251, 251);
+  border: 1px solid rgb(143, 142, 142);
+  border-radius: 5px;
+  box-shadow: 35px 35px 60px rgba(0, 0, 0, 0.1);
+  padding: 15px 20px;
 }
 
 button:hover {
-  background-color: rgba(127, 255, 212, 0.5);
+  background-color: rgb(219, 219, 211);
 }
