--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
   border: 1px solid rgb(143, 142, 142);
   width: 320px;
   height: 80px;
+  padding: 10px;
   display: flex;
   align-items: center;
   border-radius: 7px;
@@ -38,6 +39,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
+  perspective: 1000px;
 }
 
 .calculator-buttons {
@@ -56,6 +59,7 @@ button {
   border: 1px solid rgb(143, 142, 142);
   border-radius: 5px;
   box-shadow: 70px 70px 80px rgba(0, 0, 0, 0.1);
+  transform-style: preserve-3d;
   padding: 15px 20px;
 }
 
